fix some issues about ghari and translate

--- a/src/App.css
+++ b/src/App.css
@@ -76,6 +76,7 @@
   position: fixed;
   left: 10px;
   top: 10px;
+  z-index: 99;
 }
 
 .audio {
@@ -125,17 +126,21 @@
   padding: 1em;
 }
 
-button {
+.next,
+.back,
+.pre {
   background: rgba(0, 0, 0, .5);
   outline: none;
-  padding: .2em;
-  font-size: 20px;
+  padding: .1em;
+  font-size: 18px;
   color: white;
   font-family: sans-serif;
   border: none;
 }
 
-button:hover {
+.next:hover,
+.back:hover,
+.pre:hover {
   transition: all 200ms ease-in-out;
   transform: scale(1.2);
   background-color: rgb(85, 85, 85);
@@ -150,6 +155,48 @@ button:hover {
 
 .sure-head-detail {
   font-family: 'font1';
+}
+
+.setting-wrapper {
+  font-family: sans-serif;
+  font-weight: bold;
+  font-size: 18px;
+  min-height: 100vh;
+  overflow-x: hidden;
+  display: grid;
+  place-items: center;
+  background: linear-gradient(135deg, rgba(202, 202, 168, 0.596), rgba(236, 191, 154, 0.541));
+}
+
+.setting-wrapper>* {
+  display: flex;
+  gap: 1rem;
+}
+
+.title {
+  font-size: 22px;
+  font-style: italic;
+}
+
+.setting-title {
+  font-size: 42px;
+  font-weight: bolder;
+}
+
+.setting-btn {
+  background-color: unset;
+  outline: none;
+  color: black;
+  font-size: 22px;
+  border: 2px solid black;
+  border-radius: 7px;
+  min-width: 77px;
+}
+
+.setting-btn:hover {
+  transition: all 200ms ease-in-out;
+  transform: scale(1.2);
+  background-color: rgba(144, 238, 144, 0.596);
 }
 
 @media all and (max-width:768px) {
