fix some minor issues in css for first load in font-size

--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,7 @@
 
 .translate {
   margin: 12px;
+  font-size: 22px;
 }
 
 .translate-font1 {
@@ -64,6 +65,7 @@
 .aye {
   margin: 12px;
   margin-left: 75px;
+  font-size: 28px;
 }
 
 .aye-fs-28 {
